small bug on small widths

--- a/stylesheets/sass/_media-queries.scss
+++ b/stylesheets/sass/_media-queries.scss
@@ -71,6 +71,7 @@
 		margin-right: 20px;
 		float: left;
 		margin-top: -50px;
+		margin-bottom: 20px;
 	}
 	header svg {
 		float: left;
